refactor: use Integer for estimations everywhere