@@ -22,9 +22,10 @@ public class ConfirmEstimationAction extends ScrumPokerAction {
     @Override
     protected String doExecute() throws Exception {
         String issueKey = getHttpRequest().getParameter(PARAM_ISSUE_KEY);
-        String finalVote = getHttpRequest().getParameter(PARAM_FINAL_VOTE);
-        storyPointFieldSupport.save(issueKey, new Double(finalVote));
+        String finalVoteString = getHttpRequest().getParameter(PARAM_FINAL_VOTE);
+        Integer finalVote = Integer.valueOf(finalVoteString);
         scrumPokerStorage.sessionForIssue(issueKey, currentUserKey()).confirm(finalVote);
+        storyPointFieldSupport.save(issueKey, finalVote);
         return openIssue(issueKey);
     }
 
